src/test/deca/syntax/invalid/created/include/circularInclude/main.deca
// Description:
//      Importation circulaire.
//      fA importe fB 
//      fB importe fA
// Resultat :
//      Ligne 1 :  Circular include for file fA.decah

#include "fA.decah"

{
}
